@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-11-28T01:19:27Z",
-  "count_outdated" : 354,
-  "uniques_outdated" : 217,
-  "count" : 355,
-  "uniques" : 218,
+  "timestamp" : "2022-12-07T16:21:53Z",
+  "count_outdated" : 355,
+  "uniques_outdated" : 218,
+  "count" : 357,
+  "uniques" : 219,
   "clones" : [
     {
-      "timestamp": "2022-11-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
